Fix swipe icon overflow and Increase width of link

--- a/src/components/styles/icon.module.css
+++ b/src/components/styles/icon.module.css
@@ -81,13 +81,10 @@
 }
 
 .icon[swiped=""] {
-  display: none;
   opacity: 0;
   transform: scale(0);
 }
 .icon[swiped="swiped"] {
   opacity: 1;
-  display: block;
   transform: scale(1);
-  transition: 1s;
 }
