--- a/src/components/styles/link.module.css
+++ b/src/components/styles/link.module.css
@@ -25,15 +25,17 @@
 
 .swipe {
   position: inherit;
-  width: 70%;
+  width: 82%;
 }
 .def {
   box-shadow: 0px 0px 5px 5px rgba(231, 22, 22, 0.05);
 }
 
 .share {
-  right: -20%;
+  top: 25%;
+  right: 10%;
   position: absolute;
+  transition: 0.3s ease-in-out;
 }
 
 .container {
